tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_enum_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# This test should fail

enum Option<T> = Some(T) None

do
  let baz = | a =>
    let Some(Some(b)) = a # This should implicitly return Option<Option<T>>
    Some([b]) # This should fail with: Expected Option<Option<T>>, but got Option<[T]>
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_enum_4.kk:8:5
  │
8 │     Some([b]) # This should fail with: Expected Option<Option<T>>, but got Option<[T]>
  │     ^^^^^^^^^ Type mismatch
  │
  = +---------------+--------------+
    | EXPECTED TYPE | ACTUAL TYPE  |
    +---------------+--------------+
    |   Option<     |   Option<    |
    | -   Option<   | +   [        |
    | -     @TVAR7  | +     @TVAR2 |
    | -   >         | +   ]        |
    |   >           |   >          |
    +---------------+--------------+
